# aeodss

./: .gitignore  CMakeLists.txt  README.md
prot-1-circular-orbits/: CMakeLists.txt  main.cpp  prot.hpp
prot-1-circular-orbits/data/: checkFile.m
prot-1-circular-orbits/src/: Config.cpp  Config.hpp  Constants.hpp  GroundStation.cpp  GroundStation.hpp  Satellite.cpp  Satellite.hpp  StringUtils.cpp  StringUtils.hpp  Utils.cpp  Utils.hpp  Vector3D.cpp  Vector3D.hpp
prot-2-env-sfml/: CMakeLists.txt  main.cpp  prot.hpp
prot-2-env-sfml/src/: CMakeLists.txt
prot-2-env-sfml/src/common/: CMakeLists.txt  Config.cpp  Config.hpp  Init.cpp  Init.hpp  Random.cpp  Random.hpp  Utils.cpp  Utils.hpp  common_enum_types.hpp
prot-2-env-sfml/src/graphics/: AgentView.cpp  AgentView.hpp  CMakeLists.txt  ColorGradient.cpp  ColorGradient.hpp  EnvModelView.cpp  EnvModelView.hpp  HideGraphics.cpp  HideGraphics.hpp  SegmentView.cpp  SegmentView.hpp  ThickLine.cpp  ThickLine.hpp  WorldView.cpp  WorldView.hpp
prot-2-env-sfml/src/model/: Agent.cpp  Agent.hpp  Channel.cpp  Channel.hpp  EnvModel.cpp  EnvModel.hpp  GlobalEnvModel.cpp  GlobalEnvModel.hpp  Intent.cpp  Intent.hpp  IntentHandler.cpp  IntentHandler.hpp
prot-2-env-sfml/src/scheduler/: CMakeLists.txt  GASChromosome.cpp  GASChromosome.hpp  GASOperators.hpp  GASReward.cpp  GASReward.hpp  GAScheduler.cpp  GAScheduler.hpp
prot-3-gasv2/: CMakeLists.txt  main.cpp  prot.hpp
prot-3-gasv2/batch/: batch.conf  batch.sh  dbg_goal.conf  random.sh  random_batch.conf
prot-3-gasv2/batch/jobs_completed/: energy_1a.yml
prot-3-gasv2/batch/set/: baseline_n30.yml  energy_1a.yml  energy_1a_rand.yml  energy_1b.yml  energy_1b_rand.yml  energy_1c.yml  energy_1c_rand.yml  energy_1d.yml  energy_1d_rand.yml  energy_1e.yml  energy_1e_rand.yml  energy_1f.yml  energy_1f_rand.yml  energy_2a.yml  energy_2b.yml  energy_2c.yml  energy_2d.yml  energy_2e.yml  energy_2f.yml  energy_3a.yml  energy_3b.yml  energy_3c.yml  energy_3d.yml  energy_3e.yml  energy_3f.yml  random_n10.yml  random_n30.yml  test_batch_1.yml  test_batch_2.yml  test_batch_3.yml  test_batch_4.yml  test_batch_5.yml  test_batch_6.yml  test_batch_7.yml
prot-3-gasv2/batch/set/comms/: comms_12a.yml  comms_12b.yml  comms_16a.yml  comms_16b.yml  comms_16c.yml  comms_1a.yml  comms_1b.yml  comms_1c.yml  comms_1d.yml  comms_2a.yml  comms_2b.yml  comms_2c.yml  comms_2d.yml  comms_3a.yml  comms_3b.yml  comms_3c.yml  comms_3d.yml  comms_4a.yml  comms_4a_2.yml  comms_4b.yml  comms_4b_2.yml  comms_4c.yml  comms_4d.yml  comms_4d_2.yml  comms_5d.yml  comms_Xa.yml  comms_Xb.yml  comms_Xc.yml  comms_Xd.yml  system-prograde-retrograde_a.yml  walker-delta-12_a.yml  walker-delta-12_b.yml  walker-delta-16_c.yml  walker-delta-16_d.yml
prot-3-gasv2/batch/set/dbg_goal/: dbg_goal_1al.yml  dbg_goal_1as.yml  dbg_goal_1bl.yml  dbg_goal_1bs.yml  dbg_goal_1cl.yml  dbg_goal_1cs.yml  dbg_goal_2al.yml  dbg_goal_2as.yml  dbg_goal_2bl.yml  dbg_goal_2bs.yml  dbg_goal_2cl.yml  dbg_goal_2cs.yml  dbg_goal_3a.yml  dbg_goal_3aA.yml  dbg_goal_3aM.yml  dbg_goal_3b.yml  dbg_goal_3bA.yml  dbg_goal_3bM.yml  dbg_goal_3c.yml  dbg_goal_3cA.yml
prot-3-gasv2/batch/set/debug/: baseline_n10.yml  baseline_n30.yml  random_n30.yml
prot-3-gasv2/batch/set/energy/: energy_1f.yml  energy_2b.yml  energy_2e.yml  energy_3d.yml  energy_4c.yml  energy_4d.yml  energy_4e.yml  energy_5a.yml  energy_5b.yml  energy_5c.yml  energy_5d.yml  energy_5e.yml  energy_5f.yml  energy_6b.yml  energy_6c.yml  energy_6d.yml  energy_6e.yml  energy_6f.yml  energy_7b.yml  energy_7d.yml
prot-3-gasv2/batch/set/largescale/: flock-2018-operational.yml  largescale.yml
prot-3-gasv2/batch/set/memory/: constellation-10.yml  memory_10b.yml  memory_20a.yml  memory_20d.yml  memory_20e.yml  memory_2c.yml  memory_2e.yml  memory_5a.yml  memory_5e.yml
prot-3-gasv2/batch/set/schedwin/: constellation-8.yml  schedwin_05a.yml  schedwin_05b.yml  schedwin_05c.yml  schedwin_05d.yml  schedwin_0a.yml  schedwin_0b.yml  schedwin_0e.yml  schedwin_12a.yml  schedwin_12b.yml  schedwin_12c.yml  schedwin_12e.yml  schedwin_1500b.yml  schedwin_1500c.yml  schedwin_1500d.yml  schedwin_1500e.yml  schedwin_1a.yml  schedwin_1c.yml  schedwin_1d.yml  schedwin_1e.yml  schedwin_3b.yml  schedwin_75c.yml  schedwin_75d.yml  walker-delta-8.yml
prot-3-gasv2/build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
prot-3-gasv2/build2/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
prot-3-gasv2/build2/src/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
prot-3-gasv2/build2/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
prot-3-gasv2/conf/: circular_50.yml  circular_pair.yml  debug.yml  orbital_10.yml  screenshots.yml  template_conf.yml  test_valgrind.yml
prot-3-gasv2/dev/prototype-cone/: test.m  test_projection.cpp
prot-3-gasv2/src/common/: CMakeLists.txt  Config.cpp  Config.hpp  Init.cpp  Init.hpp  Log.cpp  Log.hpp  Random.cpp  Random.hpp  ReportGenerator.cpp  ReportGenerator.hpp  ReportSet.cpp  ReportSet.hpp  Utils.cpp  Utils.hpp  VirtualTime.cpp  VirtualTime.hpp  WallTime.cpp  common_enum_types.hpp  hashers.hpp
prot-3-gasv2/src/graphics/: ActivityHandlerView.cpp  ActivityHandlerView.hpp  AgentView.cpp  AgentView.hpp  CMakeLists.txt  ColorGradient.cpp  ColorGradient.hpp  GridView.cpp  GridView.hpp  HasView.hpp  MessageBox.hpp  MultiView.cpp  MultiView.hpp  SegmentView.cpp  SegmentView.hpp  ThickLine.cpp  ThickLine.hpp
prot-3-gasv2/src/model/: CMakeLists.txt  TimeStep.hpp
prot-3-gasv2/src/scheduler/: CMakeLists.txt  GASChromosome.cpp  GASChromosome.hpp  GASOperators.hpp  GASReward.cpp  GASReward.hpp  GAScheduler.cpp  GAScheduler.hpp
prot-3-gasv2/src/utils/: AgentBuilder.cpp  AgentBuilder.hpp  CMakeLists.txt  CoordinateSystemUtils.cpp  CoordinateSystemUtils.hpp  CoordinateSystemUtilsCoeff.cpp  CoordinateSystemUtilsCoeff.hpp  MathUtils.cpp  MathUtils.hpp  TLE.cpp  Utils.cpp  Utils.hpp
prot-3-gasv2/test/: CMakeLists.txt  test.cpp.in  test.hpp.in
prot-3-gasv2/test/model/: test_AgentMotion.hpp  test_BasicInstrument.hpp  test_PayoffFunctions.hpp
(+169 files in other folders)
